--- a/you-say!/you-say!/Storyboards/NewQuestion.storyboard
+++ b/you-say!/you-say!/Storyboards/NewQuestion.storyboard
@@ -158,7 +158,7 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¿Distancia máxima de respuestas?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARQ-f1-CDA">
                                                 <rect key="frame" x="0.0" y="0.0" width="333" height="31"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.16078431369999999" blue="0.51764705879999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -254,6 +254,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0bW-X2-qfb">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <color key="backgroundColor" red="0.88294178249999999" green="0.85104399919999996" blue="0.84313982730000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jzf-qc-es0">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -273,8 +277,24 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rw6-gq-ABp">
+                                <rect key="frame" x="0.0" y="88" width="414" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selecciona una" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioL-zc-cKY">
+                                        <rect key="frame" x="146.5" y="9.5" width="121" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.2470588235" green="0.31764705879999999" blue="0.70980392160000005" alpha="0.24889964789999999" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="ioL-zc-cKY" firstAttribute="centerX" secondItem="rw6-gq-ABp" secondAttribute="centerX" id="4XQ-do-Vbp"/>
+                                    <constraint firstItem="ioL-zc-cKY" firstAttribute="centerY" secondItem="rw6-gq-ABp" secondAttribute="centerY" id="BZc-bb-niS"/>
+                                    <constraint firstAttribute="height" constant="40" id="XNO-Sg-MHb"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2SS-0f-Ts3">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="128" width="414" height="734"/>
                                 <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -304,7 +324,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="fhM-IA-IXj" secondAttribute="bottom" constant="13.5" id="tOl-LL-HdX"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" white="0.65972297963961746" alpha="0.049295774647887321" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="0.24705882352941178" green="0.31764705882352939" blue="0.71372549019607845" alpha="0.049295774647887321" colorSpace="custom" customColorSpace="displayP3"/>
                                         <connections>
                                             <outlet property="categoryDescription" destination="fhM-IA-IXj" id="4vd-0n-Rox"/>
                                         </connections>
@@ -319,27 +339,26 @@
                                 <rect key="frame" x="0.0" y="862" width="414" height="34"/>
                                 <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0bW-X2-qfb">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <color key="backgroundColor" red="0.88294178249999999" green="0.85104399919999996" blue="0.84313982730000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="5rA-aU-N7l" secondAttribute="trailing" id="1O3-jC-pKj"/>
+                            <constraint firstItem="rw6-gq-ABp" firstAttribute="leading" secondItem="zoi-ZV-Kgr" secondAttribute="leading" id="1TB-42-jcZ"/>
                             <constraint firstItem="0bW-X2-qfb" firstAttribute="top" secondItem="Kpx-LW-H3Z" secondAttribute="top" id="1cE-rA-bOS"/>
                             <constraint firstAttribute="bottom" secondItem="5rA-aU-N7l" secondAttribute="bottom" id="8FW-ND-2NH"/>
                             <constraint firstItem="2SS-0f-Ts3" firstAttribute="leading" secondItem="zoi-ZV-Kgr" secondAttribute="leading" id="9fL-cL-JwZ"/>
                             <constraint firstItem="2SS-0f-Ts3" firstAttribute="bottom" secondItem="zoi-ZV-Kgr" secondAttribute="bottom" id="DGh-u0-0zr"/>
                             <constraint firstItem="0bW-X2-qfb" firstAttribute="leading" secondItem="Kpx-LW-H3Z" secondAttribute="leading" id="Pc5-Zk-yhk"/>
                             <constraint firstItem="5rA-aU-N7l" firstAttribute="leading" secondItem="Kpx-LW-H3Z" secondAttribute="leading" id="Qgw-HV-oKd"/>
+                            <constraint firstItem="rw6-gq-ABp" firstAttribute="top" secondItem="Jzf-qc-es0" secondAttribute="bottom" id="Tkv-mC-sCi"/>
+                            <constraint firstItem="2SS-0f-Ts3" firstAttribute="top" secondItem="rw6-gq-ABp" secondAttribute="bottom" id="UY0-Qs-iBr"/>
                             <constraint firstItem="Jzf-qc-es0" firstAttribute="top" secondItem="zoi-ZV-Kgr" secondAttribute="top" id="VIa-b5-c69"/>
-                            <constraint firstItem="2SS-0f-Ts3" firstAttribute="top" secondItem="Jzf-qc-es0" secondAttribute="bottom" id="Vu3-Sp-4Ah"/>
                             <constraint firstItem="Jzf-qc-es0" firstAttribute="leading" secondItem="zoi-ZV-Kgr" secondAttribute="leading" id="XBY-Qn-dDN"/>
                             <constraint firstItem="Jzf-qc-es0" firstAttribute="trailing" secondItem="zoi-ZV-Kgr" secondAttribute="trailing" id="XYe-4s-MiB"/>
                             <constraint firstItem="Jzf-qc-es0" firstAttribute="top" secondItem="0bW-X2-qfb" secondAttribute="bottom" id="ekt-Z4-lc5"/>
                             <constraint firstAttribute="trailing" secondItem="0bW-X2-qfb" secondAttribute="trailing" id="nvV-nH-ewH"/>
                             <constraint firstItem="2SS-0f-Ts3" firstAttribute="trailing" secondItem="zoi-ZV-Kgr" secondAttribute="trailing" id="uah-Ma-AOD"/>
+                            <constraint firstItem="rw6-gq-ABp" firstAttribute="trailing" secondItem="zoi-ZV-Kgr" secondAttribute="trailing" id="ute-ox-PZc"/>
                             <constraint firstItem="5rA-aU-N7l" firstAttribute="top" secondItem="2SS-0f-Ts3" secondAttribute="bottom" id="vPj-5H-xoV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zoi-ZV-Kgr"/>
